# music-bubbles

./: .gitignore  app.py  pyproject.toml  requirements.txt
data/: songs.csv
static/css/: styles.css
static/js/: search_sort.js
templates/: add_youtube.html  base.html  category.html  home.html  results.html  songs.html  stats.html  stats_detail.html
