[tool.poetry]
name = "music-bubbles"
version = "0.1.0"
description = ""
authors = ["featuresandbugs <hello@fernandodelgado.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
pandas = "^2.2.3"
rapidfuzz = "^3.10.0"
python-levenshtein = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
